chore: add jvmArgs to test task to avoid warnings about native access